--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.544.0",
     "nuxt": "^4.1.2",
+    "nuxt-icon": "^1.0.0-beta.7",
     "reka-ui": "^2.5.1",
     "shadcn-nuxt": "^2.2.0",
     "tailwind-merge": "^3.3.1",
@@ -25,6 +26,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@nuxtjs/color-mode": "^3.5.2",
     "typescript": "^5.9.3"
   }
 }
