feat(auth): update Google authentication integration and improve runtime config handling

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@nuxtjs/color-mode": "^3.5.2",
+    "@types/node": "^24.7.2",
     "typescript": "^5.9.3"
   }
 }
