--- a/BackEnd/requirements.txt
+++ b/BackEnd/requirements.txt
@@ -7,6 +7,8 @@ python-multipart
 python-dotenv
 pydantic>=2.0
 pydantic-settings>=2.0
+pydantic[email]
+email-validator
 python-jose[cryptography]
 passlib[bcrypt]
 bcrypt==4.0.1
