feat: Add API documentation page with interactive features and overview
feat: Implement forgot password functionality with two-step reset process

docs: Complete implementation guide for FarmTrack with detailed features and setup instructions

docs: Add QR code feature guide for public traceability of animals

--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,24 @@ node_modules
 logs
 *.log
 
-# Misc
-.DS_Store
+# Python
+*.pyc
+*.pyo
+*.pyd
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Uploads
+uploads/
+
+# IDE
+.vscode/
 .fleet
 .idea
+
+# Misc
+.DS_Store
 
 # Local env files
 .env
